--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,93 @@
   justify-content: center;
 }
 
-.title {
+.main-title {
   color: #FFF;
+}
+
+body {
+  background-color: #f2f2f2;
+  letter-spacing: 0.25px;
+}
+
+.container {
+  min-width: 50vw;
+  margin-top: 30px;
+}
+
+.card {
+  overflow: auto;
+}
+
+.waves-effect {
+  width: 100%;
+}
+
+.subheader {
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.5rem;
+  margin: 0.75rem 16px;
+}
+
+.list-divider {
+  border: 0;
+  height: 1px;
+  overflow: hidden;
+  background-color: #e0e0e0;
+  margin-right: 16px;
+  margin-left: 75px;
+}
+
+.list {
+  margin: 0;
+}
+
+.list li {
+  padding: 0 16px;
+}
+
+.list li .valign-wrapper {
+  min-height: 72px;
+}
+
+.list i.circle {
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.26);
+}
+
+.list .title span {
+  color: rgba(0, 0, 0, 0.54);
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+i.ml-auto {
+  color: rgba(0, 0, 0, 0.26);
+}
+
+.title {
+  width:100%;
+}
+
+.button {
+  background-color: #FFF;
+  border: none;
+}
+
+.btn {
+    border: none;
+    background-color: #FFF;
+    width: 100%;
+    color: #000;
+}
+
+input {
+  margin-top: 20px;
+}
+
+.form {
+  min-width: 50vw;
 }
